--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Built application files
+.DS_Store
+*.iml
 *.apk
 *.ap_
+.externalNativeBuild
 
 # Files for the ART/Dalvik VM
 *.dex
@@ -35,21 +38,7 @@ captures/
 # Intellij
 *.iml
 .idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/dictionaries
 .idea/libraries
 
 # Keystore files
 *.jks
-
-# External native build folder generated in Android Studio 2.2 and later
-.externalNativeBuild
-
-# Google Services (e.g. APIs or Firebase)
-google-services.json
-
-# Freeline
-freeline.py
-freeline/
-freeline_project_description.json
